# Novel-Web

./: Cargo.toml  readme.md
backend/: Cargo.toml  README.md
backend/config/: default.json  default.yml
backend/src/: app.rs  database.rs  error.rs  logger.rs  main.rs  setting.rs  settings.rs  web.rs
backend/src/model/: book.rs  mod.rs  user.rs
backend/src/models/: book.rs  message.rs  mod.rs
backend/src/router/: book.rs  user.rs
backend/src/routes/: user.rs
backend/src/util/: auth.rs
config/: default.json
frontend/: package-lock.json  package.json
src/: database.rs  main.rs  settings.rs
src/models/: user.rs
src/routes/: book.rs
