[package]
name = "Novel-Web-Backend-Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
config = "0.14.0"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "0.8.1", features = ["postgres"] }
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
