[package]
name = "Novel-Web-Backend-Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["tracing"] }
config = "0.14.0"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
] }
tokio = { version = "1.39.3", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
